--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dj-stripe
-version = 1.1.1.post1
+version = 1.2.4.post1+cloudsmith
 description = Django + Stripe Made Easy
 author = Alexander Kavanaugh
 author_email = alex@kavdev.io
